// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Average duration by browser when data is loaded returns the average duration by browser 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "x": 1593413100000,
      },
      Object {
        "x": 1593413101000,
      },
      Object {
        "x": 1593413102000,
      },
      Object {
        "x": 1593413103000,
      },
      Object {
        "x": 1593413104000,
      },
      Object {
        "x": 1593413105000,
      },
      Object {
        "x": 1593413106000,
      },
      Object {
        "x": 1593413107000,
      },
      Object {
        "x": 1593413108000,
      },
      Object {
        "x": 1593413109000,
      },
      Object {
        "x": 1593413110000,
      },
      Object {
        "x": 1593413111000,
      },
      Object {
        "x": 1593413112000,
      },
      Object {
        "x": 1593413113000,
      },
      Object {
        "x": 1593413114000,
      },
      Object {
        "x": 1593413115000,
      },
      Object {
        "x": 1593413116000,
      },
      Object {
        "x": 1593413117000,
      },
      Object {
        "x": 1593413118000,
      },
      Object {
        "x": 1593413119000,
      },
      Object {
        "x": 1593413120000,
      },
      Object {
        "x": 1593413121000,
      },
      Object {
        "x": 1593413122000,
      },
      Object {
        "x": 1593413123000,
      },
      Object {
        "x": 1593413124000,
      },
      Object {
        "x": 1593413125000,
      },
      Object {
        "x": 1593413126000,
      },
      Object {
        "x": 1593413127000,
      },
      Object {
        "x": 1593413128000,
      },
      Object {
        "x": 1593413129000,
      },
      Object {
        "x": 1593413130000,
      },
      Object {
        "x": 1593413131000,
      },
      Object {
        "x": 1593413132000,
      },
      Object {
        "x": 1593413133000,
      },
      Object {
        "x": 1593413134000,
      },
      Object {
        "x": 1593413135000,
      },
      Object {
        "x": 1593413136000,
      },
      Object {
        "x": 1593413137000,
      },
      Object {
        "x": 1593413138000,
      },
      Object {
        "x": 1593413139000,
      },
      Object {
        "x": 1593413140000,
      },
      Object {
        "x": 1593413141000,
      },
      Object {
        "x": 1593413142000,
      },
      Object {
        "x": 1593413143000,
      },
      Object {
        "x": 1593413144000,
      },
      Object {
        "x": 1593413145000,
      },
      Object {
        "x": 1593413146000,
      },
      Object {
        "x": 1593413147000,
      },
      Object {
        "x": 1593413148000,
      },
      Object {
        "x": 1593413149000,
      },
      Object {
        "x": 1593413150000,
      },
      Object {
        "x": 1593413151000,
      },
      Object {
        "x": 1593413152000,
      },
      Object {
        "x": 1593413153000,
      },
      Object {
        "x": 1593413154000,
      },
      Object {
        "x": 1593413155000,
      },
      Object {
        "x": 1593413156000,
      },
      Object {
        "x": 1593413157000,
      },
      Object {
        "x": 1593413158000,
      },
      Object {
        "x": 1593413159000,
      },
      Object {
        "x": 1593413160000,
      },
      Object {
        "x": 1593413161000,
      },
      Object {
        "x": 1593413162000,
      },
      Object {
        "x": 1593413163000,
      },
      Object {
        "x": 1593413164000,
      },
      Object {
        "x": 1593413165000,
      },
      Object {
        "x": 1593413166000,
      },
      Object {
        "x": 1593413167000,
      },
      Object {
        "x": 1593413168000,
      },
      Object {
        "x": 1593413169000,
      },
      Object {
        "x": 1593413170000,
      },
      Object {
        "x": 1593413171000,
      },
      Object {
        "x": 1593413172000,
      },
      Object {
        "x": 1593413173000,
      },
      Object {
        "x": 1593413174000,
      },
      Object {
        "x": 1593413175000,
      },
      Object {
        "x": 1593413176000,
      },
      Object {
        "x": 1593413177000,
      },
      Object {
        "x": 1593413178000,
      },
      Object {
        "x": 1593413179000,
      },
      Object {
        "x": 1593413180000,
      },
      Object {
        "x": 1593413181000,
      },
      Object {
        "x": 1593413182000,
      },
      Object {
        "x": 1593413183000,
      },
      Object {
        "x": 1593413184000,
      },
      Object {
        "x": 1593413185000,
      },
      Object {
        "x": 1593413186000,
      },
      Object {
        "x": 1593413187000,
      },
      Object {
        "x": 1593413188000,
      },
      Object {
        "x": 1593413189000,
      },
      Object {
        "x": 1593413190000,
      },
      Object {
        "x": 1593413191000,
      },
      Object {
        "x": 1593413192000,
      },
      Object {
        "x": 1593413193000,
      },
      Object {
        "x": 1593413194000,
      },
      Object {
        "x": 1593413195000,
      },
      Object {
        "x": 1593413196000,
      },
      Object {
        "x": 1593413197000,
      },
      Object {
        "x": 1593413198000,
      },
      Object {
        "x": 1593413199000,
      },
      Object {
        "x": 1593413200000,
      },
      Object {
        "x": 1593413201000,
      },
      Object {
        "x": 1593413202000,
      },
      Object {
        "x": 1593413203000,
      },
      Object {
        "x": 1593413204000,
      },
      Object {
        "x": 1593413205000,
      },
      Object {
        "x": 1593413206000,
      },
      Object {
        "x": 1593413207000,
      },
      Object {
        "x": 1593413208000,
      },
      Object {
        "x": 1593413209000,
      },
      Object {
        "x": 1593413210000,
      },
      Object {
        "x": 1593413211000,
      },
      Object {
        "x": 1593413212000,
      },
      Object {
        "x": 1593413213000,
      },
      Object {
        "x": 1593413214000,
      },
      Object {
        "x": 1593413215000,
      },
      Object {
        "x": 1593413216000,
      },
      Object {
        "x": 1593413217000,
      },
      Object {
        "x": 1593413218000,
      },
      Object {
        "x": 1593413219000,
      },
      Object {
        "x": 1593413220000,
      },
      Object {
        "x": 1593413221000,
      },
      Object {
        "x": 1593413222000,
      },
      Object {
        "x": 1593413223000,
      },
      Object {
        "x": 1593413224000,
      },
      Object {
        "x": 1593413225000,
      },
      Object {
        "x": 1593413226000,
      },
      Object {
        "x": 1593413227000,
      },
      Object {
        "x": 1593413228000,
      },
      Object {
        "x": 1593413229000,
      },
      Object {
        "x": 1593413230000,
      },
      Object {
        "x": 1593413231000,
      },
      Object {
        "x": 1593413232000,
      },
      Object {
        "x": 1593413233000,
      },
      Object {
        "x": 1593413234000,
      },
      Object {
        "x": 1593413235000,
      },
      Object {
        "x": 1593413236000,
      },
      Object {
        "x": 1593413237000,
      },
      Object {
        "x": 1593413238000,
      },
      Object {
        "x": 1593413239000,
      },
      Object {
        "x": 1593413240000,
      },
      Object {
        "x": 1593413241000,
      },
      Object {
        "x": 1593413242000,
      },
      Object {
        "x": 1593413243000,
      },
      Object {
        "x": 1593413244000,
      },
      Object {
        "x": 1593413245000,
      },
      Object {
        "x": 1593413246000,
      },
      Object {
        "x": 1593413247000,
      },
      Object {
        "x": 1593413248000,
      },
      Object {
        "x": 1593413249000,
      },
      Object {
        "x": 1593413250000,
      },
      Object {
        "x": 1593413251000,
      },
      Object {
        "x": 1593413252000,
      },
      Object {
        "x": 1593413253000,
      },
      Object {
        "x": 1593413254000,
      },
      Object {
        "x": 1593413255000,
      },
      Object {
        "x": 1593413256000,
      },
      Object {
        "x": 1593413257000,
      },
      Object {
        "x": 1593413258000,
      },
      Object {
        "x": 1593413259000,
      },
      Object {
        "x": 1593413260000,
      },
      Object {
        "x": 1593413261000,
      },
      Object {
        "x": 1593413262000,
      },
      Object {
        "x": 1593413263000,
      },
      Object {
        "x": 1593413264000,
      },
      Object {
        "x": 1593413265000,
      },
      Object {
        "x": 1593413266000,
      },
      Object {
        "x": 1593413267000,
      },
      Object {
        "x": 1593413268000,
      },
      Object {
        "x": 1593413269000,
      },
      Object {
        "x": 1593413270000,
      },
      Object {
        "x": 1593413271000,
      },
      Object {
        "x": 1593413272000,
      },
      Object {
        "x": 1593413273000,
      },
      Object {
        "x": 1593413274000,
      },
      Object {
        "x": 1593413275000,
      },
      Object {
        "x": 1593413276000,
      },
      Object {
        "x": 1593413277000,
      },
      Object {
        "x": 1593413278000,
      },
      Object {
        "x": 1593413279000,
      },
      Object {
        "x": 1593413280000,
      },
      Object {
        "x": 1593413281000,
      },
      Object {
        "x": 1593413282000,
      },
      Object {
        "x": 1593413283000,
      },
      Object {
        "x": 1593413284000,
      },
      Object {
        "x": 1593413285000,
      },
      Object {
        "x": 1593413286000,
      },
      Object {
        "x": 1593413287000,
        "y": 342000,
      },
      Object {
        "x": 1593413288000,
      },
      Object {
        "x": 1593413289000,
      },
      Object {
        "x": 1593413290000,
      },
      Object {
        "x": 1593413291000,
      },
      Object {
        "x": 1593413292000,
      },
      Object {
        "x": 1593413293000,
      },
      Object {
        "x": 1593413294000,
      },
      Object {
        "x": 1593413295000,
      },
      Object {
        "x": 1593413296000,
      },
      Object {
        "x": 1593413297000,
      },
      Object {
        "x": 1593413298000,
        "y": 173000,
      },
      Object {
        "x": 1593413299000,
      },
      Object {
        "x": 1593413300000,
      },
      Object {
        "x": 1593413301000,
        "y": 109000,
      },
      Object {
        "x": 1593413302000,
      },
      Object {
        "x": 1593413303000,
      },
      Object {
        "x": 1593413304000,
      },
      Object {
        "x": 1593413305000,
      },
      Object {
        "x": 1593413306000,
      },
      Object {
        "x": 1593413307000,
      },
      Object {
        "x": 1593413308000,
      },
      Object {
        "x": 1593413309000,
      },
      Object {
        "x": 1593413310000,
      },
      Object {
        "x": 1593413311000,
      },
      Object {
        "x": 1593413312000,
      },
      Object {
        "x": 1593413313000,
      },
      Object {
        "x": 1593413314000,
      },
      Object {
        "x": 1593413315000,
      },
      Object {
        "x": 1593413316000,
      },
      Object {
        "x": 1593413317000,
      },
      Object {
        "x": 1593413318000,
        "y": 140000,
      },
      Object {
        "x": 1593413319000,
      },
      Object {
        "x": 1593413320000,
      },
      Object {
        "x": 1593413321000,
      },
      Object {
        "x": 1593413322000,
      },
      Object {
        "x": 1593413323000,
      },
      Object {
        "x": 1593413324000,
      },
      Object {
        "x": 1593413325000,
      },
      Object {
        "x": 1593413326000,
      },
      Object {
        "x": 1593413327000,
      },
      Object {
        "x": 1593413328000,
        "y": 77000,
      },
      Object {
        "x": 1593413329000,
      },
      Object {
        "x": 1593413330000,
      },
      Object {
        "x": 1593413331000,
      },
      Object {
        "x": 1593413332000,
      },
      Object {
        "x": 1593413333000,
      },
      Object {
        "x": 1593413334000,
      },
      Object {
        "x": 1593413335000,
      },
      Object {
        "x": 1593413336000,
      },
      Object {
        "x": 1593413337000,
      },
      Object {
        "x": 1593413338000,
      },
      Object {
        "x": 1593413339000,
      },
      Object {
        "x": 1593413340000,
      },
    ],
    "title": "HeadlessChrome",
  },
]
`;

exports[`Average duration by browser when data is loaded returns the average duration by browser filtering by transaction name 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "x": 1593413100000,
      },
      Object {
        "x": 1593413101000,
      },
      Object {
        "x": 1593413102000,
      },
      Object {
        "x": 1593413103000,
      },
      Object {
        "x": 1593413104000,
      },
      Object {
        "x": 1593413105000,
      },
      Object {
        "x": 1593413106000,
      },
      Object {
        "x": 1593413107000,
      },
      Object {
        "x": 1593413108000,
      },
      Object {
        "x": 1593413109000,
      },
      Object {
        "x": 1593413110000,
      },
      Object {
        "x": 1593413111000,
      },
      Object {
        "x": 1593413112000,
      },
      Object {
        "x": 1593413113000,
      },
      Object {
        "x": 1593413114000,
      },
      Object {
        "x": 1593413115000,
      },
      Object {
        "x": 1593413116000,
      },
      Object {
        "x": 1593413117000,
      },
      Object {
        "x": 1593413118000,
      },
      Object {
        "x": 1593413119000,
      },
      Object {
        "x": 1593413120000,
      },
      Object {
        "x": 1593413121000,
      },
      Object {
        "x": 1593413122000,
      },
      Object {
        "x": 1593413123000,
      },
      Object {
        "x": 1593413124000,
      },
      Object {
        "x": 1593413125000,
      },
      Object {
        "x": 1593413126000,
      },
      Object {
        "x": 1593413127000,
      },
      Object {
        "x": 1593413128000,
      },
      Object {
        "x": 1593413129000,
      },
      Object {
        "x": 1593413130000,
      },
      Object {
        "x": 1593413131000,
      },
      Object {
        "x": 1593413132000,
      },
      Object {
        "x": 1593413133000,
      },
      Object {
        "x": 1593413134000,
      },
      Object {
        "x": 1593413135000,
      },
      Object {
        "x": 1593413136000,
      },
      Object {
        "x": 1593413137000,
      },
      Object {
        "x": 1593413138000,
      },
      Object {
        "x": 1593413139000,
      },
      Object {
        "x": 1593413140000,
      },
      Object {
        "x": 1593413141000,
      },
      Object {
        "x": 1593413142000,
      },
      Object {
        "x": 1593413143000,
      },
      Object {
        "x": 1593413144000,
      },
      Object {
        "x": 1593413145000,
      },
      Object {
        "x": 1593413146000,
      },
      Object {
        "x": 1593413147000,
      },
      Object {
        "x": 1593413148000,
      },
      Object {
        "x": 1593413149000,
      },
      Object {
        "x": 1593413150000,
      },
      Object {
        "x": 1593413151000,
      },
      Object {
        "x": 1593413152000,
      },
      Object {
        "x": 1593413153000,
      },
      Object {
        "x": 1593413154000,
      },
      Object {
        "x": 1593413155000,
      },
      Object {
        "x": 1593413156000,
      },
      Object {
        "x": 1593413157000,
      },
      Object {
        "x": 1593413158000,
      },
      Object {
        "x": 1593413159000,
      },
      Object {
        "x": 1593413160000,
      },
      Object {
        "x": 1593413161000,
      },
      Object {
        "x": 1593413162000,
      },
      Object {
        "x": 1593413163000,
      },
      Object {
        "x": 1593413164000,
      },
      Object {
        "x": 1593413165000,
      },
      Object {
        "x": 1593413166000,
      },
      Object {
        "x": 1593413167000,
      },
      Object {
        "x": 1593413168000,
      },
      Object {
        "x": 1593413169000,
      },
      Object {
        "x": 1593413170000,
      },
      Object {
        "x": 1593413171000,
      },
      Object {
        "x": 1593413172000,
      },
      Object {
        "x": 1593413173000,
      },
      Object {
        "x": 1593413174000,
      },
      Object {
        "x": 1593413175000,
      },
      Object {
        "x": 1593413176000,
      },
      Object {
        "x": 1593413177000,
      },
      Object {
        "x": 1593413178000,
      },
      Object {
        "x": 1593413179000,
      },
      Object {
        "x": 1593413180000,
      },
      Object {
        "x": 1593413181000,
      },
      Object {
        "x": 1593413182000,
      },
      Object {
        "x": 1593413183000,
      },
      Object {
        "x": 1593413184000,
      },
      Object {
        "x": 1593413185000,
      },
      Object {
        "x": 1593413186000,
      },
      Object {
        "x": 1593413187000,
      },
      Object {
        "x": 1593413188000,
      },
      Object {
        "x": 1593413189000,
      },
      Object {
        "x": 1593413190000,
      },
      Object {
        "x": 1593413191000,
      },
      Object {
        "x": 1593413192000,
      },
      Object {
        "x": 1593413193000,
      },
      Object {
        "x": 1593413194000,
      },
      Object {
        "x": 1593413195000,
      },
      Object {
        "x": 1593413196000,
      },
      Object {
        "x": 1593413197000,
      },
      Object {
        "x": 1593413198000,
      },
      Object {
        "x": 1593413199000,
      },
      Object {
        "x": 1593413200000,
      },
      Object {
        "x": 1593413201000,
      },
      Object {
        "x": 1593413202000,
      },
      Object {
        "x": 1593413203000,
      },
      Object {
        "x": 1593413204000,
      },
      Object {
        "x": 1593413205000,
      },
      Object {
        "x": 1593413206000,
      },
      Object {
        "x": 1593413207000,
      },
      Object {
        "x": 1593413208000,
      },
      Object {
        "x": 1593413209000,
      },
      Object {
        "x": 1593413210000,
      },
      Object {
        "x": 1593413211000,
      },
      Object {
        "x": 1593413212000,
      },
      Object {
        "x": 1593413213000,
      },
      Object {
        "x": 1593413214000,
      },
      Object {
        "x": 1593413215000,
      },
      Object {
        "x": 1593413216000,
      },
      Object {
        "x": 1593413217000,
      },
      Object {
        "x": 1593413218000,
      },
      Object {
        "x": 1593413219000,
      },
      Object {
        "x": 1593413220000,
      },
      Object {
        "x": 1593413221000,
      },
      Object {
        "x": 1593413222000,
      },
      Object {
        "x": 1593413223000,
      },
      Object {
        "x": 1593413224000,
      },
      Object {
        "x": 1593413225000,
      },
      Object {
        "x": 1593413226000,
      },
      Object {
        "x": 1593413227000,
      },
      Object {
        "x": 1593413228000,
      },
      Object {
        "x": 1593413229000,
      },
      Object {
        "x": 1593413230000,
      },
      Object {
        "x": 1593413231000,
      },
      Object {
        "x": 1593413232000,
      },
      Object {
        "x": 1593413233000,
      },
      Object {
        "x": 1593413234000,
      },
      Object {
        "x": 1593413235000,
      },
      Object {
        "x": 1593413236000,
      },
      Object {
        "x": 1593413237000,
      },
      Object {
        "x": 1593413238000,
      },
      Object {
        "x": 1593413239000,
      },
      Object {
        "x": 1593413240000,
      },
      Object {
        "x": 1593413241000,
      },
      Object {
        "x": 1593413242000,
      },
      Object {
        "x": 1593413243000,
      },
      Object {
        "x": 1593413244000,
      },
      Object {
        "x": 1593413245000,
      },
      Object {
        "x": 1593413246000,
      },
      Object {
        "x": 1593413247000,
      },
      Object {
        "x": 1593413248000,
      },
      Object {
        "x": 1593413249000,
      },
      Object {
        "x": 1593413250000,
      },
      Object {
        "x": 1593413251000,
      },
      Object {
        "x": 1593413252000,
      },
      Object {
        "x": 1593413253000,
      },
      Object {
        "x": 1593413254000,
      },
      Object {
        "x": 1593413255000,
      },
      Object {
        "x": 1593413256000,
      },
      Object {
        "x": 1593413257000,
      },
      Object {
        "x": 1593413258000,
      },
      Object {
        "x": 1593413259000,
      },
      Object {
        "x": 1593413260000,
      },
      Object {
        "x": 1593413261000,
      },
      Object {
        "x": 1593413262000,
      },
      Object {
        "x": 1593413263000,
      },
      Object {
        "x": 1593413264000,
      },
      Object {
        "x": 1593413265000,
      },
      Object {
        "x": 1593413266000,
      },
      Object {
        "x": 1593413267000,
      },
      Object {
        "x": 1593413268000,
      },
      Object {
        "x": 1593413269000,
      },
      Object {
        "x": 1593413270000,
      },
      Object {
        "x": 1593413271000,
      },
      Object {
        "x": 1593413272000,
      },
      Object {
        "x": 1593413273000,
      },
      Object {
        "x": 1593413274000,
      },
      Object {
        "x": 1593413275000,
      },
      Object {
        "x": 1593413276000,
      },
      Object {
        "x": 1593413277000,
      },
      Object {
        "x": 1593413278000,
      },
      Object {
        "x": 1593413279000,
      },
      Object {
        "x": 1593413280000,
      },
      Object {
        "x": 1593413281000,
      },
      Object {
        "x": 1593413282000,
      },
      Object {
        "x": 1593413283000,
      },
      Object {
        "x": 1593413284000,
      },
      Object {
        "x": 1593413285000,
      },
      Object {
        "x": 1593413286000,
      },
      Object {
        "x": 1593413287000,
      },
      Object {
        "x": 1593413288000,
      },
      Object {
        "x": 1593413289000,
      },
      Object {
        "x": 1593413290000,
      },
      Object {
        "x": 1593413291000,
      },
      Object {
        "x": 1593413292000,
      },
      Object {
        "x": 1593413293000,
      },
      Object {
        "x": 1593413294000,
      },
      Object {
        "x": 1593413295000,
      },
      Object {
        "x": 1593413296000,
      },
      Object {
        "x": 1593413297000,
      },
      Object {
        "x": 1593413298000,
      },
      Object {
        "x": 1593413299000,
      },
      Object {
        "x": 1593413300000,
      },
      Object {
        "x": 1593413301000,
      },
      Object {
        "x": 1593413302000,
      },
      Object {
        "x": 1593413303000,
      },
      Object {
        "x": 1593413304000,
      },
      Object {
        "x": 1593413305000,
      },
      Object {
        "x": 1593413306000,
      },
      Object {
        "x": 1593413307000,
      },
      Object {
        "x": 1593413308000,
      },
      Object {
        "x": 1593413309000,
      },
      Object {
        "x": 1593413310000,
      },
      Object {
        "x": 1593413311000,
      },
      Object {
        "x": 1593413312000,
      },
      Object {
        "x": 1593413313000,
      },
      Object {
        "x": 1593413314000,
      },
      Object {
        "x": 1593413315000,
      },
      Object {
        "x": 1593413316000,
      },
      Object {
        "x": 1593413317000,
      },
      Object {
        "x": 1593413318000,
      },
      Object {
        "x": 1593413319000,
      },
      Object {
        "x": 1593413320000,
      },
      Object {
        "x": 1593413321000,
      },
      Object {
        "x": 1593413322000,
      },
      Object {
        "x": 1593413323000,
      },
      Object {
        "x": 1593413324000,
      },
      Object {
        "x": 1593413325000,
      },
      Object {
        "x": 1593413326000,
      },
      Object {
        "x": 1593413327000,
      },
      Object {
        "x": 1593413328000,
        "y": 77000,
      },
      Object {
        "x": 1593413329000,
      },
      Object {
        "x": 1593413330000,
      },
      Object {
        "x": 1593413331000,
      },
      Object {
        "x": 1593413332000,
      },
      Object {
        "x": 1593413333000,
      },
      Object {
        "x": 1593413334000,
      },
      Object {
        "x": 1593413335000,
      },
      Object {
        "x": 1593413336000,
      },
      Object {
        "x": 1593413337000,
      },
      Object {
        "x": 1593413338000,
      },
      Object {
        "x": 1593413339000,
      },
      Object {
        "x": 1593413340000,
      },
    ],
    "title": "HeadlessChrome",
  },
]
`;
